# resyntha-platform

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  coverage.xml  docker-compose.override.yml  docker-compose.yml  infrastructure-security-audit.json  package-lock.json  portfolio.json  what-i-learned.md
backend/: .dockerignore  .env.development  .env.docker  .env.example  .env.production.example  .env.testing  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0aebd0079076_add_authors_column_to_papers.py  0aebd0079077_add_copilot_tables.py  5f1b6d843b21_add_execution_stages_and_metadata.py  5f1b6d843b22_add_extracted_knowledge_table.py  5f1b6d843b23_add_research_landscape_artifact_type.py  5f1b6d843b24_add_research_gap_report_artifact_type.py  5f1b6d843b25_add_partial_success_to_stage_status.py  5f1b6d843b26_add_rich_extraction_fields.py  5f1b6d843b27_add_chunk_embeddings.py  5f1b6d843b28_add_unique_constraint_extracted_knowledge.py  d4bc8ca984b8_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  health.py
backend/app/bootstrap/: __init__.py  lifespan.py  shutdown.py  startup.py
backend/app/cache/: __init__.py  decorators.py  keys.py  service.py
backend/app/config/: __init__.py  constants.py  environment.py  environments.py  logging.py  settings.py  validation.py
backend/app/core/: __init__.py  context.py  exceptions.py  lifespan.py  logging.py
backend/app/core/llm/: __init__.py  base.py  exceptions.py  factory.py  groq.py  openai.py  parser.py
backend/app/core/middleware/: __init__.py  request_id.py  request_logging.py  request_size.py  timeout.py
backend/app/core/retrieval/: __init__.py  arxiv.py  base.py  exceptions.py  factory.py  openalex.py  semantic_scholar.py
backend/app/database/: __init__.py  base.py  dependencies.py  health.py  model_registry.py  session.py
backend/app/health/: __init__.py  models.py  routes.py  service.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/redis/: __init__.py  client.py  health.py
backend/app/metrics/: __init__.py  middleware.py  registry.py  service.py
backend/app/modules/analysis/: __init__.py
backend/app/modules/artifact/: __init__.py
backend/app/modules/bookmark/: __init__.py
backend/app/modules/collection/: __init__.py
backend/app/modules/execution/: __init__.py
backend/app/modules/extraction/: __init__.py
backend/app/modules/gap_detection/: __init__.py
backend/app/modules/institution/: __init__.py
backend/app/modules/intelligence/: __init__.py  config.py  (+1 more)
backend/app/observability/: __init__.py  logger.py
backend/app/pipeline/: __init__.py  context.py  definition.py  exceptions.py  recorder.py  result.py  retry.py  runner.py  stage.py
backend/app/plugins/: __init__.py  base.py  registry.py  wrappers.py
backend/app/rate_limit/: __init__.py  decorators.py  middleware.py  models.py  service.py
backend/app/security/: __init__.py  config.py  headers.py  middleware.py  upload.py
backend/app/workers/: __init__.py  retrieval_job.py  worker.py
backend/app/workflows/: __init__.py
backend/resyntha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_aggregation.py  test_analyzers.py  test_cache.py  test_config.py  test_copilot_context.py  test_copilot_evaluation.py  test_copilot_prompt.py  test_copilot_quality.py  test_copilot_retrieval.py  test_copilot_routes_api.py  test_copilot_s4.py  test_copilot_s5.py  test_copilot_semantic.py  test_copilot_service.py  test_extraction.py  test_graph_api.py  test_health.py  test_institution_intelligence.py  test_institution_profiles.py  test_intelligence.py  test_intelligence_api.py  test_intelligence_routes_api.py  test_llm_parser.py  test_metrics.py  test_middleware.py  test_pipeline_intelligence.py  test_presentation.py  test_rate_limit.py  test_security.py  test_services.py  test_workspace.py
(+567 files in other folders)
