[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resyntha"
version = "0.1.0"
description = "Multi-Agent Research Intelligence Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "redis",
    "arq",
    "python-dotenv",
    "structlog",
    "httpx",
    "groq",
    "pgvector",
    "numpy",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
