[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resyntha"
version = "0.1.0"
description = "Multi-Agent Research Intelligence Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "redis",
    "arq",
    "python-dotenv",
    "structlog",
    "httpx",
    "groq",
    "pgvector",
    "numpy",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pip-audit",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "N806", "N817"]
"alembic/*" = ["E501"]
"app/modules/copilot/prompt/builder.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
files = ["app/"]
plugins = ["pydantic.mypy"]
exclude = [
    "alembic/",
]
